2014-06-26  Uwe Schulzweida

	* using CDI library version 1.6.4
	* Version 1.6.4 released

2014-06-18  Uwe Schulzweida

	* added option --netcdf_hdr_pad <nbr>: Pad netCDF output header with nbr bytes

2014-06-12  Uwe Schulzweida

	* remapeta: added support for standard name

2014-06-11  Uwe Schulzweida

	* Ymonstat: sorts output by month of year

2014-06-10  Uwe Schulzweida

	* eof3d: set sum weights to 1 (bug fix)
	* eofcoeff: remove scaling with grid cell area weights (bug fix)
	* eofcoeff3d: remove scaling with grid cell area weights (bug fix)

2014-06-02  Uwe Schulzweida

	* tinfo: added support for forecast time axis

2014-05-22  Uwe Schulzweida

	* remap.h: define M_PI [Bug #4845]

2014-05-16  Uwe Schulzweida

	* pstream.h: added include of sys/types [Bug #4810]

2014-05-12  Uwe Schulzweida

	* diff: check NaNs

2014-05-09  Uwe Schulzweida

	* make option -W default

2014-04-24  Uwe Schulzweida

	* Filter: segmentation fault (bug fix)
	* Filter: filters only gridsize-1 grid cells (bug fix)
	* setltype, chltype: added support for GRIB2

2014-04-15  Uwe Schulzweida

	* select/delete: add support for negative timesteps
	* seltimestep: add support for negative timesteps [patch from: Etienne Tourigny]

2014-04-14  Uwe Schulzweida

	* New operator: sealevelpressure - sea level pressure

2014-03-14  Uwe Schulzweida

	* remapcon: check for missing values in normalisation

2014-03-10  Uwe Schulzweida

	* added Option -H to do not append to netCDF "history" global attribute

2014-03-03  Uwe Schulzweida

	* Zonstat: bug fix if input stream contains only zonal data

2014-02-19  Uwe Schulzweida

	* Diff: added number of different values to output

2014-02-18  Uwe Schulzweida

	* using CDI library version 1.6.3
	* Version 1.6.3 released

2014-01-29  Uwe Schulzweida

	* gridFromH5file: skipped if attribute >bounds< is defined [Bug #4411]

2014-01-24  Uwe Schulzweida

	* expr: select variables by name

2014-01-09  Uwe Schulzweida
